Fixing the header sizing for mobile and scrolling on mobile

--- a/resources/styles/main.scss
+++ b/resources/styles/main.scss
@@ -515,7 +515,7 @@ header #sponsorButton {
     position: absolute;
     top: 20px;
     left: 20px;
-    z-index: 5;
+    z-index: 2;
 }
 
 #social i {
@@ -605,7 +605,65 @@ header #sponsorButton {
     }
 }
 @media (max-width: 430px) {
+    header #title {
+        bottom: 0px;
+        margin-top: 0px;
+        margin-bottom: 0px;
+
+        .text {
+            line-height: 0.9;
+            margin-bottom: 60px;
+        }
+    }
+
+    header #sponsorButton {
+        height: 54px;
+        font-size: 30px;
+    }
+
+    header #volunteerButton {
+        height: 54px;
+        font-size: 30px;
+    }
+
+    header #registerButton {
+        top: -100px;
+        height: 68px;
+        font-size: 35px;
+    }
+
+    header #downArrow {
+        top: 410px;
+    }
+
+    #social {
+        top: 20px;
+        left: 20px;
+        bottom: 20px;
+        right: 20px;
+
+        a:first-child {
+            position: absolute;
+            left: 0px;
+            bottom: 0px;
+        }
+
+        a:last-child {
+            position: absolute;
+            right: 0px;
+            bottom: 0px;
+        }
+    }
+
     #main div .question {
         padding: 0px;
+    }
+
+    #main .breaker {
+        height: 150px;
+    }
+
+    footer {
+        margin-bottom: 80px;
     }
 }
